tests/errors/chained_comparison.experr
chained comparison is not allowed